refactor: renamed mobile nav to header

--- a/src/components/common/header/index.astro
+++ b/src/components/common/header/index.astro
@@ -14,7 +14,7 @@ import Container from "@/layouts/container-custom/index.astro"
 import SocialLinks from "@/components/common/header/social-icons/jsx/index"
 
 // IMPORT ASTRO COMPONENTS
-import MobileNav from "@/components/common/header/mobile/index.astro"
+import MobileHeader from "@/components/common/header/mobile/index.astro"
 
 // IMPORT ASTRO ATOMS
 import Link from "@/atoms/links/index.astro"
@@ -72,6 +72,6 @@ const data = {
                 </ul>
             </div>
         </nav>
-        <MobileNav header_data={ header_data }/>
+        <MobileHeader header_data={ header_data }/>
     </Container>
 </header>
