--- a/src/components/home/testimonials/card/index.astro
+++ b/src/components/home/testimonials/card/index.astro
@@ -18,8 +18,8 @@ const {
 
 ---
 
-<div class="px-8 py-10 flex flex-col items-center gap-6 bg-white rounded-lg min-h-dvh">
-    <div class="size-24 aspect-square">
+<div class="flex flex-col items-center gap-6 bg-white rounded-lg min-h-dvh px-8 py-10">
+    <div class="size-24">
         <PictureContain
             alternative_text=""
             source={ source }
