--- a/src/components/common/header/index.astro
+++ b/src/components/common/header/index.astro
@@ -52,17 +52,10 @@ const data = {
 
                             return (
 
-                                <li>
-                                    {
-
-                                        item.data.live &&
-                                        <Link href={ item.data.link }>
-                                            <span class="text-white font-medium hover:text-gray-400 duration-300">{ item.data.title }</span>
-                                        </Link>
-
-
-                                    }
-                                </li>
+                                item.data.live &&
+                                <Link href={ item.data.link }>
+                                    <li class="text-white font-medium hover:text-gray-400 duration-300">{ item.data.title }</li>
+                                </Link>
 
                             )
 
