--- a/src/components/common/header/mobile/index.astro
+++ b/src/components/common/header/mobile/index.astro
@@ -49,19 +49,13 @@ const data = {
     {
 
         header_data.map( ( item ) => {
-
+            
             return (
 
-                <li>
-                    {
-
-                        item.data.live &&
-                        <Link href={ item.data.link }>
-                            <span class="text-white text-lg underline block pt-4">{ item.data.title }</span>
-                        </Link>
-
-                    }
-                </li>
+                item.data.live &&
+                <Link href={ item.data.link }>
+                    <li class="text-white text-lg underline block pt-4">{ item.data.title }</li>
+                </Link>
 
             )  
 
