--- a/src/components/common/header/mobile/index.astro
+++ b/src/components/common/header/mobile/index.astro
@@ -28,7 +28,7 @@ const data = {
     <div class="flex justify-end">
         <SocialLinks/>
     </div>
-    <div class="flex justify-between">
+    <div class="flex items-center justify-between">
         <div class="h-16 md:h-20 aspect-[4/1]">
             <Link href={ data.logo_link }>
                 <PictureContain
@@ -37,7 +37,7 @@ const data = {
                 />
             </Link>
         </div>
-        <div class="w-8 aspect-square cursor-pointer" id="burger-menu">
+        <div class="size-8 cursor-pointer" id="burger-menu">
             <PictureContain
                 alternative_text="menu"
                 source="/icons/burger-menu.svg"
@@ -54,7 +54,7 @@ const data = {
 
                 item.data.live &&
                 <Link href={ item.data.link }>
-                    <li class="text-white text-lg underline block pt-4">{ item.data.title }</li>
+                    <li class="text-white text-lg underline">{ item.data.title }</li>
                 </Link>
 
             )  
@@ -76,7 +76,7 @@ const data = {
 
             mobileNav.classList.remove('max-h-0')
             mobileNav.classList.add('max-h-screen')
-            mobileNav.classList.add('py-4')
+            mobileNav.classList.add('py-6')
             navbar.classList.add('border-b-2')
 
         } 
@@ -87,7 +87,7 @@ const data = {
             // DELAY FOR REMOVING THE PADDING AND BORDER FOR SMOOTH ANIMATIONS
             setTimeout(() => {
 
-                mobileNav.classList.remove('py-4')
+                mobileNav.classList.remove('py-6')
                 navbar.classList.remove('border-b-2')
 
             }, 500)
