refactor: comment modified

--- a/src/components/home/hero/index.astro
+++ b/src/components/home/hero/index.astro
@@ -103,7 +103,7 @@ const heading_data = [
             slidesToShow: 1,
             slidesToScroll: 1,
 
-            // BOTTOM DOTS FALSE
+            // BOTTOM DOTS
             dots: false,
 
             // SLIDE INFINITELY
