refactor: added mx-2 for spacing between cards

--- a/src/components/home/work/card/index.astro
+++ b/src/components/home/work/card/index.astro
@@ -25,7 +25,7 @@ const {
 ---
 
 <Link href={ link }>
-    <div class="flex flex-col justify-between bg-[url('/images/work-slider-bg.jpeg')] bg-cover bg-center hover:bg-[url('/images/home-bg-pic.jpg')] duration-300 h-screen px-6 py-8 group">
+    <div class="flex flex-col justify-between bg-[url('/images/work-slider-bg.jpeg')] bg-cover bg-center hover:bg-[url('/images/home-bg-pic.jpg')] duration-300 h-screen px-6 py-8 mx-2 group">
         <div class="flex flex-col gap-4">
             <HeadingThreeWhite>{ title }</HeadingThreeWhite>
             <HeadingFourEmerald>{ subtitle_one }</HeadingFourEmerald>
