--- a/src/components/common/header/index.astro
+++ b/src/components/common/header/index.astro
@@ -5,7 +5,7 @@ import { getCollection } from "astro:content"
 
 // IMPORT HEADER COLLECTION
 let header_data = await getCollection("header")
-header_data = header_data.sort( ( a, b ) => a.data.order - b.data.order )
+header_data = header_data.filter(item => item.data.live).sort((a, b) => a.data.order - b.data.order)
 
 // IMPORT ASTRO LAYOUTS
 import Container from "@/layouts/container-custom/index.astro"
@@ -52,7 +52,6 @@ const data = {
 
                             return (
 
-                                item.data.live &&
                                 <Link href={ item.data.link }>
                                     <li class="text-white font-medium hover:text-gray-400 duration-300">{ item.data.title }</li>
                                 </Link>
