--- a/src/atoms-diksha/buttons/outlined/index.astro
+++ b/src/atoms-diksha/buttons/outlined/index.astro
@@ -1,3 +1,3 @@
-<button class="font-fira_sans text-lg text-color-primary font-extralight px-2 py-1 border border-color-primary rounded-lg hover:bg-color-primary hover:text-white">
-    <slot />
+<button class="flex gap-1 px-2 py-1 border border-color-primary rounded-lg hover:bg-color-primary hover:text-white">
+    <slot/>
 </button>
