--- a/src/components/home/services/index.astro
+++ b/src/components/home/services/index.astro
@@ -1,11 +1,14 @@
 ---
 
-// IMPORT COMPONENTS
-import ServiceCard from "./service-card/index.astro"  
+// IMPORT ASTRO LAYOUTS
+import ServicesLayout from "@/layouts/home-layout/services-layout/index.astro"
 
-// IMPORT ATOMS
-import HeadingTwoSixXlWhite from "@/atoms-diksha/headings/two/6xl/black/white/index.astro";
-import HeadingSixWhite from "@/atoms-diksha/headings/six/white/index.astro";
+// IMPORT ASTRO COMPONENTS
+import ServiceCard from "@/components/home/services/service-card/index.astro"
+
+// IMPORT ASTRO ATOMS
+import HeadingTwoSixXlCenterWhite from "@/atoms-diksha/headings/two/6xl/black/center/white/index.astro"
+import HeadingSixUppercaseWhite from "@/atoms-diksha/headings/six/uppercase/white/index.astro"
 
 // CONSTANTS
 const services = [
@@ -33,28 +36,26 @@ const services = [
 
 ---
 
-<section class=" bg-color-primary md:py-24 md:px-16 px-6 py-12">
-    <div class="flex flex-col gap-2 items-center">
-        <div class="flex gap-6 items-center">
-            <hr class="w-16 border-t-2 border-color-secondary"/>
-            <HeadingSixWhite>OUR SERVICES</HeadingSixWhite>
-        </div>
-        <div class="sm:w-1/3">
-            <HeadingTwoSixXlWhite>
-                What we do to drive results
-                <span class="text-color-secondary">.</span>
-            </HeadingTwoSixXlWhite>
-        </div>
-        <div class="pt-10 md:pt-20 flex flex-col flex-wrap lg:flex-nowrap sm:flex-row gap-8 justify-center">
-            {
-                services.map((service) => (
-                    <ServiceCard 
-                        image_source={service.image_source} 
-                        title={service.title} 
-                        description={service.description} 
-                    />
-                ))
-            }
-        </div>
+<ServicesLayout>
+    <div class="flex gap-6 items-center">
+        <hr class="w-16 border-t-2 border-color-secondary"/>
+        <HeadingSixUppercaseWhite>OUR SERVICES</HeadingSixUppercaseWhite>
     </div>
-</section>
+    <div class="sm:w-1/3">
+        <HeadingTwoSixXlCenterWhite>
+            What we do to drive results
+            <span class="text-color-secondary">.</span>
+        </HeadingTwoSixXlCenterWhite>
+    </div>
+    <div class="pt-10 md:pt-20 flex flex-col flex-wrap lg:flex-nowrap sm:flex-row gap-8 justify-center">
+        {
+            services.map( ( service ) => (
+                <ServiceCard 
+                    description={ service.description } 
+                    image_source={ service.image_source } 
+                    title={ service.title } 
+                />
+            ))
+        }
+    </div>
+</ServicesLayout>
