--- a/src/components/common/footer/columns-anchor/index.astro
+++ b/src/components/common/footer/columns-anchor/index.astro
@@ -9,7 +9,7 @@ const { data } = Astro.props
 
 ---
 <section>
-    <ul class="pt-5">
+    <ul class="pt-5 space-y-4">
         {
 
             data.map( ( item ) => {
