--- a/src/atoms/atoms-nandini/list-items/white/index.astro
+++ b/src/atoms/atoms-nandini/list-items/white/index.astro
@@ -1,3 +1,3 @@
-<li class="text-white underline hover:no-underline font-fira_sans tracking-widest my-4">
+<li class="text-white underline hover:no-underline font-fira_sans tracking-widest">
     <slot/>
 </li>
