--- a/src/atoms/atoms-nandini/paragraphs/base/semibold/index.astro
+++ b/src/atoms/atoms-nandini/paragraphs/base/semibold/index.astro
@@ -1,3 +1,3 @@
-<p class="font-larken group-hover:text-white group-hover:bg-black lg:font-semibold text-xs font-medium lg:text-base xl:font-normal tracking-wide">
+<p class="font-larken group-hover:text-white lg:font-semibold text-xs font-medium lg:text-base xl:font-normal tracking-wide">
     <slot/>
 </p>
