--- a/src/atoms/atoms-nandini/paragraphs/sm/index.astro
+++ b/src/atoms/atoms-nandini/paragraphs/sm/index.astro
@@ -1,3 +1,3 @@
-<p class="font-fira_sans text-sm group-hover:text-white group-hover:bg-black">
+<p class="font-fira_sans text-sm group-hover:text-white">
     <slot/>
 </p>
