--- a/src/atoms/atoms-nandini/paragraphs/xs/extrabold/index.astro
+++ b/src/atoms/atoms-nandini/paragraphs/xs/extrabold/index.astro
@@ -1,3 +1,3 @@
-<p class="font-fira_sans text-xs group-hover:text-white group-hover:bg-black font-extrabold tracking-wide">
+<p class="font-fira_sans text-xs group-hover:text-white font-extrabold tracking-wide">
     <slot/>
 </p>
