--- a/src/components/home/services/index.astro
+++ b/src/components/home/services/index.astro
@@ -1,7 +1,7 @@
 ---
 
 // IMPORT ASTRO LAYOUTS
-import ServicesLayout from "@/layouts/home-layout/services-layout/index.astro"
+import ContainerLarge from "@/layouts/container-large/index.astro"
 
 // IMPORT ASTRO COMPONENTS
 import ServiceCard from "@/components/home/services/service-card/index.astro"
@@ -36,26 +36,34 @@ const services = [
 
 ---
 
-<ServicesLayout>
-    <div class="flex gap-6 items-center">
-        <hr class="w-16 border-t-2 border-color-secondary"/>
-        <HeadingSixUppercaseWhite>OUR SERVICES</HeadingSixUppercaseWhite>
-    </div>
-    <div class="sm:w-1/3">
-        <HeadingTwoSixXlCenterWhite>
-            What we do to drive results
-            <span class="text-color-secondary">.</span>
-        </HeadingTwoSixXlCenterWhite>
-    </div>
-    <div class="pt-10 md:pt-20 flex flex-col flex-wrap lg:flex-nowrap sm:flex-row gap-8 justify-center">
-        {
-            services.map( ( service ) => (
-                <ServiceCard 
-                    description={ service.description } 
-                    image_source={ service.image_source } 
-                    title={ service.title } 
-                />
-            ))
-        }
-    </div>
-</ServicesLayout>
+<div class="bg-color-primary">
+    <ContainerLarge>
+        <div class="flex flex-col gap-2 items-center">
+            <div class="flex gap-6 items-center">
+                <hr class="w-16 border-t-2 border-color-secondary"/>
+                <HeadingSixUppercaseWhite>OUR SERVICES</HeadingSixUppercaseWhite>
+            </div>
+            <div class="sm:w-1/3">
+                <HeadingTwoSixXlCenterWhite>
+                    What we do to drive results
+                    <span class="text-color-secondary">.</span>
+                </HeadingTwoSixXlCenterWhite>
+            </div>
+            <div class="pt-10 md:pt-20 flex flex-col flex-wrap lg:flex-nowrap sm:flex-row gap-8 justify-center">
+                {
+
+                    services.map( ( service ) => (
+
+                        <ServiceCard 
+                            description={ service.description } 
+                            image_source={ service.image_source } 
+                            title={ service.title } 
+                        />
+
+                    ))
+                    
+                }
+            </div>
+        </div>
+    </ContainerLarge>
+</div>
