refactor- changed aspect ratio of images

--- a/src/components/home/about/index.astro
+++ b/src/components/home/about/index.astro
@@ -25,13 +25,13 @@ const about_us = {
 <ContainerLarge>
     <div class="flex flex-col gap-6 lg:flex-row justify-between items-center">
         <div class="relative">
-            <div class="w-full aspect-auto">
+            <div class="w-full aspect-[9/16]">
                 <Picture 
                     alternative_text="about_us_2"
                     source="/images/about-us-2.png" 
                 />
             </div>
-            <div class="hidden xl:block absolute top-20 -right-40 -z-10 w-full aspect-auto">
+            <div class="hidden xl:block absolute top-20 -right-40 -z-10 w-full aspect-sqaure">
                 <Picture 
                     alternative_text="about_us_1"
                     source="/images/about-us-1.png" 
