--- a/src/components/home/services/service-card/index.astro
+++ b/src/components/home/services/service-card/index.astro
@@ -17,7 +17,7 @@ const {
 ---
 
 <div class="p-6 flex-none flex flex-col items-start gap-2 bg-color-tertiary lg:bg-color-primary rounded-xl">
-    <div class="h-20 w-auto aspect-auto">
+    <div class="h-20 aspect-square">
         <Picture 
             alternative_text={ title }
             source={ image_source } 
