--- a/src/components/home/blogs/index.astro
+++ b/src/components/home/blogs/index.astro
@@ -57,7 +57,7 @@ const blogs=[
             </div>
             <div class="grid sm:grid-cols-2 gap-4">
                 <div>
-                    <div class="relative w-full h-full aspect-auto rounded-xl overflow-hidden">
+                    <div class="relative size-full rounded-xl overflow-hidden">
                         <PictureInternal
                             alternative_text="Image"
                             source="/images/blogs.png"
